--- a/Colab.ipynb
+++ b/Colab.ipynb
@@ -5,7 +5,7 @@
    "id": "79ddf98a",
    "metadata": {},
    "source": [
-    "# Welcome to DESI High @ Google Collab!"
+    "# Welcome to DESI High @ Google Colab!"
    ]
   },
   {
