--- a/Intro.ipynb
+++ b/Intro.ipynb
@@ -755,7 +755,7 @@
       },
       "outputs": [],
       "source": [
-        "label_style = {'fontname': 'Arial', 'fontsize': 16} "
+        "label_style = {'fontsize': 16} "
       ]
     },
     {
