--- a/Intro.ipynb
+++ b/Intro.ipynb
@@ -940,7 +940,7 @@
         "id": "RUZ5-z9NppJm"
       },
       "source": [
-        "Seems a pretty good fit! "
+        "Seems a pretty good fit! However, remember that today we know that this value is not correct."
       ]
     },
     {
