--- a/DESI.ipynb
+++ b/DESI.ipynb
@@ -532,6 +532,7 @@
         "You might try the list [here](http://classic.sdss.org/dr6/algorithms/linestable.html) to start.  \n",
         "\n",
         "The Paschen series is a good one!"
+        "You can also play with the interactive DESI [viewer](https://www.legacysurvey.org/viewer#NGC%204317) to check out the images of ALL galaxies DESI has or will observe. \n "
       ]
     }
   ],
