--- a/DESI.ipynb
+++ b/DESI.ipynb
@@ -531,7 +531,7 @@
         "Now you're an expert, can you figure out what lines other than Hydrogen are present here (and plot them)?\n",
         "You might try the list [here](http://classic.sdss.org/dr6/algorithms/linestable.html) to start.  \n",
         "\n",
-        "The Paschen series is a good one!"
+        "The Paschen series is a good one!\n",
         "You can also play with the interactive DESI [viewer](https://www.legacysurvey.org/viewer#NGC%204317) to check out the images of ALL galaxies DESI has or will observe. \n "
       ]
     }
