--- a/Intro.ipynb
+++ b/Intro.ipynb
@@ -1554,7 +1554,7 @@
         "id": "lzmvyAfSppJs"
       },
       "source": [
-        "You can find all the details of his work here:  https://arxiv.org/pdf/astro-ph/9812133.pdf.  Warning, this is for the pros so don't worry if you don't understand too much!"
+        "You can find all the details of his work here:  https://arxiv.org/pdf/astro-ph/9812133.pdf. "
       ]
     },
     {
@@ -1581,7 +1581,7 @@
         "id": "3iKxJ8-HppJt"
       },
       "source": [
-        "The primary motivation for DESI is to repeat similar distant-redshift measurements much more precisely and learn much more about this spooky Dark Energy! "
+        "The primary motivation for DESI is to repeat similar distant-redshift measurements much more precisely and learn much more about Dark Energy! "
       ]
     }
   ],
