--- a/DESI.ipynb
+++ b/DESI.ipynb
@@ -146,7 +146,7 @@
         "id": "vZbuKOA-9KUj"
       },
       "source": [
-        "As Hubble once did, we also need observers to run the telescope for us.  Within DESI, everyone gets a turn at this (whether you're an expert or not!).  Here's [Satya](https://satyagontcho.space/) in the control room, ready for a night of observing."
+        "As Hubble once did, we also need observers to run the telescope for us.  Within DESI, everyone gets a turn at this (whether you're an expert or not!).  Here's Amy Robertson (Telescope Operator), [Satya](https://satyagontcho.space/) Gontcho A Gontcho (Lead Observing Scientist), Antonella Palmese (Observer) in the control room, ready for a night of observing."
       ]
     },
     {
@@ -155,7 +155,7 @@
         "id": "rz8HuBHp9KUj"
       },
       "source": [
-        "![alt](https://github.com/apalmese/desihigh/blob/main/desihigh/images/satya.jpg?raw=1)"
+        "![alt](https://github.com/apalmese/desihigh/blob/main/desihigh/images/controlroom.jpeg?raw=1)"
       ]
     },
     {
