--- a/DESI.ipynb
+++ b/DESI.ipynb
@@ -193,7 +193,7 @@
         "id": "VzwNXXpY9KUl"
       },
       "source": [
-        "![title](https://github.com/apalmese/desihigh/blob/main/desihigh/images/spectra2D.png?raw=1)"
+        "![alt](https://github.com/apalmese/desihigh/blob/main/desihigh/images/spectra2D.png?raw=1)"
       ]
     },
     {
