--- a/Intro.ipynb
+++ b/Intro.ipynb
@@ -941,7 +941,7 @@
         "id": "NrFrr840ppJm"
       },
       "source": [
-        "Now it's your turn, can you figure out a good estimate of the error on this measurement of the Hubble costant.  How accurately can we predict the recession of a galaxy at a given distance, i.e. how fast or slow could it be moving?    "
+        "Now it's your turn, can you figure out a good estimate of the error on this measurement of the Hubble costant.   "
       ]
     },
     {
