--- a/Intro.ipynb
+++ b/Intro.ipynb
@@ -1513,7 +1513,6 @@
         "\n",
         "pl.plot(zs, effmag(zs, 0.0, 6.), c='k',   label='No Dark Energy', alpha=0.5)\n",
         "pl.plot(zs, effmag(zs, 0.5, 6.), c='k',   label='50% Dark Energy!')\n",
-        "pl.plot(zs, effmag(zs, 0.75, 6.), c='c', label='75% Dark Energy!')\n",
         "\n",
         "pl.xlabel('z')\n",
         "pl.ylabel('Effective magnitude')\n",
@@ -1527,6 +1526,7 @@
         "id": "ZSEQRSbkppJr"
       },
       "source": [
+        "Can you now add our best fit result to the plot above?\n",
         "So there's something like 75% dark energy in the Universe!  As the first people to make this measurement, Saul, together with Brian Schmidt and Adam Reiss, would be awarded the 2011 Nobel Prize for their work."
       ]
     },
